--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Rabbit Hole
 email: juniorrubydev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Looking for a way out of the burrow of software development
+  Looking for a way out
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
